<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="infoItemTimeTable"
            type="gam.trainingcourse.annht2_advanceandroid_contentprovider_app_getdata.model.InfoItemTimeTable" />
        <import type="android.view.View"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:background="@color/white_ddd"
        app:cardCornerRadius="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/viewMonday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_timetable"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvIdTimeTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@{infoItemTimeTable.idTimeTable}"
                        android:textColor="@color/black2"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_timetable"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvNameTimeTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@{infoItemTimeTable.nameTimeTable}"
                        android:textColor="@color/black2"
                        android:textSize="18sp" />
                </TableRow>


            </TableLayout>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[0] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewMonday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewTuesday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tableLayoutTitle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[0]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[1] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewTuesday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewWednesday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewMonday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[1]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[2] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewWednesday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewThursday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTuesday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[2]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[3] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewThursday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewFriday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewWednesday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[3]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[4] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewFriday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewSaturday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewThursday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[4]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[5] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewSaturday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toTopOf="@+id/viewSunday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewFriday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[5]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:visibility="@{infoItemTimeTable.dayInWeekAndSubjects.statusDayInWeek[6] ? View.VISIBLE : View.GONE}"
                android:id="@+id/viewSunday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewSaturday">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday_s"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvListSubjectsSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@{infoItemTimeTable.dayInWeekAndSubjects.listSubjects[6]}"
                    android:textColor="@color/black2"
                    android:textSize="14sp" />
            </TableRow>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>